--- a/inex.css
+++ b/inex.css
@@ -10,16 +10,7 @@ header{
     justify-content: center;
 }
 
-.container{
-    width: 90vw;
-    /* container: 100px; */
-    display: flex;
-    justify-content: center;
-    margin-inline: auto;
-    gap: 20px;
-    padding-inline: 20px;
-    /* background-color: blue; */
-}
+
 .containere{
     width: 100vw;
     /* container: 100px; */
@@ -212,15 +203,24 @@ span{
 main{
     width: 100vw;
 }
-
+.container{
+    width: 90vw;
+    /* container: 100px; */
+    display: flex;
+    justify-content: center;
+    margin-inline: 100px;
+    gap: 20px;
+    padding-inline: 30px;
+    /* background-color: blue; */
+}
 .pic{
-    width: 100%;
+    width: 90vw;
     height: 600px;
     display: flex;
     justify-content: center;
     align-items: end;
     gap: 10px;
-    background-image: url("/Image/Com.png");
+    background-image: url("Image/Com.png");
 }
 /* img{
     width: 100%;
@@ -246,18 +246,18 @@ button:hover{
 }
 
 .textbox{
-    width: 90vh;
+    width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .box>a>img{
-    width: 300px;
+    width: 280px;
     height: 200px;
 }
 
 .box1>a>img{
-    width: 510px;
+    width: 485px;
     height: 800px;
 }
 .space{
@@ -267,4 +267,40 @@ button:hover{
     margin: auto;
     gap: 20px;
     /* background-color: blue; */
+}
+.sp_bt{
+        width: 90vw;
+        /* container: 100px; */
+        display: flex;
+        justify-content: space-between;
+        margin-inline: 100px;
+        gap: 20px;
+        padding-inline: 20px;
+        /* background-color: blue; */
+}
+
+.box2{
+    background-color: rgb(255, 255, 255);
+    width: 22.5vw;
+    height: 700px;
+}
+.koko{
+    padding-inline: 10px;
+}
+
+.textsize40{
+    font-size: 30px;
+}
+.textsize20{
+    font-size: 20px;
+}
+.pl{
+    margin-top: 20px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+.box2>a>img{
+    width: 100%;
+    height: 600px;
 }
