--- a/inex.css
+++ b/inex.css
@@ -136,7 +136,11 @@ nav > ul >.fonts:hover >.drop3{
     height: 260px;
     position: absolute;
 }
-
+td>a:hover{
+    font-weight: bold;
+    font-size: 17px;
+    text-decoration: underline;
+}
 .logo{
     width: 30%;
     display: flex;
@@ -303,4 +307,37 @@ button:hover{
 .box2>a>img{
     width: 100%;
     height: 600px;
+}
+
+.pl>h3>i:active{
+    transform: scale(1.2);
+    /* color: rgb(255, 255, 255); */
+    background-color: rgb(0, 0, 0);
+}
+footer{
+    width: 100vw;
+}
+.containeree{
+    width: 90vw;
+    /* container: 100px; */
+    display: flex;
+    margin-inline: auto;
+    margin-top: 0;
+    justify-content: space-between;
+    /* background-color: rgb(255, 0, 0); */
+    /* padding-top: 20px; */
+    padding-inline: 30px;
+    /* background-color: blue; */
+}
+.box3{
+    height: 300px;
+}
+.box3:nth-child(1)>img{
+    margin-top: 10px;
+    width: 100px;
+}
+
+hr{
+    transform: translate(90deg);
+    color: black;
 }
